app-charts/templates/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  proxy
  labels:
    app:  proxy
spec:
  selector:
    matchLabels:
      app: proxy
  replicas: 1
  template:
    metadata:
      labels:
        app:  proxy
    spec:
      containers:
      - name:  proxy
        image:  nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort:  80
          name:  proxy
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/templates/
      volumes:
        - name: config
          configMap:
            name: nginx.conf
            items:
            - key: nginx.conf
              path: nginx.conf.conf
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: proxy
  type: ClusterIP
  ports:
  - name: proxy
    protocol: TCP
    port: 8888
    targetPort: 80
