app-charts/templates/ingress-robo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"

  name: ingress-tls-redis-dev-test

spec:
  tls:
  - hosts:
    - todo-dev-test.conix.ai
    secretName: secret-le-prod-redis-dev-test
    
  
  rules:
  - host: todo-dev-test.conix.ai
    http:
      paths:
      - path: /
        backend:
          service:
            name: proxy
            port: 
              number: 80
